tests/ui/ffi_const.stderr
error[E0756]: `#[ffi_const]` may only be used on foreign functions
  --> $DIR/ffi_const.rs:4:1
   |
LL | #[ffi_const]
   | ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0756`.
